# ConvexHull

./: CMakeLists.txt  Jarvis vs. Graham Scan Data.xlsx  README.md  RandomCoordGenerator.py  Runner.cpp  Runner.h  main.cpp
.github/workflows/: build.yaml
ConvexInputFiles/: Input1.txt  Input10.txt  Input2.txt  Input3.txt  Input4.txt  Input5.txt  Input6.txt  Input7.txt  Input8.txt  Input9.txt
